--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>About — Your Name</title>
+    <title>About — Tom Strohl</title>
     <meta name="description" content="Brief about me page" />
     <style>
         :root{font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif;color:#111;background:#f7f7f8}
@@ -25,15 +25,15 @@
         <header>
             <img class="avatar" src="assets/avatar.png" alt="Your Name — photo or avatar (replace)" />
             <div>
-                <h1>Your Name</h1>
-                <p class="lead">Frontend developer, designer, and lifelong learner building small projects and experiments.</p>
-                <div class="meta">Location • City, Country · <a href="mailto:you@example.com">you@example.com</a></div>
+                <h1>Tom Strohl</h1>
+                <p class="lead">Aspiring programmer</p>
+                <div class="meta">Location • Bethlehem, PA, USA · <a href="mailto:tstrohl2003@gmil.com">tstrohl2003@gmail.com</a></div>
             </div>
         </header>
 
         <section id="about" aria-labelledby="about-heading">
             <h2 id="about-heading">About</h2>
-            <p>Brief bio: who you are, what you do, and what you're interested in. Replace this text with a short paragraph describing your background, current work, and goals.</p>
+            <p>Currently working full-time while attending school part time.</p>
 
             <h3>Skills</h3>
             <div class="skills" aria-label="Skills">
@@ -52,12 +52,12 @@
 
         <section id="contact" aria-labelledby="contact-heading">
             <h2 id="contact-heading">Contact</h2>
-            <p>If you'd like to get in touch: <a href="mailto:you@example.com">you@example.com</a></p>
-            <p>Find me on <a href="https://github.com/your-username" target="_blank" rel="noopener">GitHub</a> or <a href="https://twitter.com/your-handle" target="_blank" rel="noopener">Twitter</a>.</p>
+            <p>If you'd like to get in touch: <a href="tstrohl2003@gmail.com">tstrohl2003@gmail.com</a></p>
+            <p>Find me on <a href="https://github.com/phantomenderium" target="_blank" rel="noopener">GitHub</a> or <a href="https://twitter.com/your-handle" target="_blank" rel="noopener">Twitter</a>.</p>
         </section>
 
         <footer>
-            <small>© <span id="year"></span> Your Name. All content by you.</small>
+            <small>© <span id="year"></span> Tom Strohl. I don't actually have a copyright</small>
         </footer>
     </main>
 
