test using my insta pfp

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 <body>
     <main class="container">
         <header>
-            <img class="avatar" src="assets/avatar.png" alt="Your Name — photo or avatar (replace)" />
+            <img class="avatar" src="https://instagram.com/phantomenderium/media/?size=l" alt="Tom Strohl — Instagram profile photo" />
             <div>
                 <h1>Tom Strohl</h1>
                 <p class="lead">Aspiring programmer</p>
-                <div class="meta">Location • Bethlehem, PA, USA · <a href="mailto:tstrohl2003@gmil.com">tstrohl2003@gmail.com</a></div>
+                <div class="meta">Location • Bethlehem, PA, USA · <a href="mailto:tstrohl2003@gmail.com">tstrohl2003@gmail.com</a></div>
             </div>
         </header>
 
