fuck instagram local file GO

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <main class="container">
         <header>
-            <img class="avatar" src="https://scontent-iad3-2.cdninstagram.com/v/t51.2885-19/386868551_2643605832469163_5018936027389436666_n.jpg?efg=eyJ2ZW5jb2RlX3RhZyI6InByb2ZpbGVfcGljLmRqYW5nby4xMDgwLmMyIn0&_nc_ht=scontent-iad3-2.cdninstagram.com&_nc_cat=111&_nc_oc=Q6cZ2QHoIic2PXSjpID39ciWXGkz_36hyYonrb8NopI-uUyAh-hQSks6hnnnkHP1oIgzHic&_nc_ohc=3hgwROe3Rj8Q7kNvwHkpjFL&_nc_gid=d3lMVaYZ_99DZEZqQZ2hdQ&edm=AP4sbd4BAAAA&ccb=7-5&oh=00_AfjkF5QsZanEixYQiaPrMrXk7tlOm5YCUL4-xhCNev9gpA&oe=69284AE9&_nc_sid=7a9f4b" alt="Tom Strohl — Instagram profile photo" />
+            <img class="avatar" src="avatar/tom-pfp.jpg" alt="Tom Strohl — Avatar" />
             <div>
                 <h1>Tom Strohl</h1>
                 <p class="lead">Aspiring programmer</p>
