--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <main class="container">
         <header>
-            <img class="avatar" src="avatar/tom-pfp.jpg" alt="Tom Strohl — Avatar" />
+            <img class="avatar" src="assets/tom-pfp.jpg" alt="Tom Strohl — Avatar" />
             <div>
                 <h1>Tom Strohl</h1>
                 <p class="lead">Aspiring programmer</p>
