dark mode for main page

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>About — Tom Strohl</title>
     <meta name="description" content="Brief about me page" />
     <style>
-        :root{font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif;color:#111;background:#f7f7f8}
+        :root{font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif;color:#e0e0e0;background:#1a1a1a}
         body{margin:0;line-height:1.45}
         .container{max-width:900px;margin:3rem auto;padding:1.25rem}
         header{display:flex;align-items:center;gap:1rem}
-        img.avatar{width:96px;height:96px;border-radius:12px;object-fit:cover;background:#ddd}
+        img.avatar{width:96px;height:96px;border-radius:12px;object-fit:cover;background:#333}
         h1{margin:.25rem 0;font-size:1.5rem}
-        p.lead{margin:.25rem 0;color:#333}
-        .meta{color:#555;font-size:.95rem;margin-top:.5rem}
+        p.lead{margin:.25rem 0;color:#b0b0b0}
+        .meta{color:#888;font-size:.95rem;margin-top:.5rem}
         .skills{display:flex;gap:.5rem;flex-wrap:wrap;margin:.75rem 0}
-        .skill{background:#e6e6ea;padding:.35rem .6rem;border-radius:999px;font-size:.85rem}
-        footer{margin-top:2rem;color:#666;font-size:.9rem;border-top:1px solid #e8e8ec;padding-top:1rem}
-        a{color:inherit;text-decoration:underline}
+        .skill{background:#2a2a2e;padding:.35rem .6rem;border-radius:999px;font-size:.85rem}
+        footer{margin-top:2rem;color:#666;font-size:.9rem;border-top:1px solid #333;padding-top:1rem}
+        a{color:#64b5f6;text-decoration:underline}
     </style>
 </head>
 <body>
