changes to main page, added courtyard page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section id="contact" aria-labelledby="contact-heading">
             <h2 id="contact-heading">Contact</h2>
             <p>If you'd like to get in touch: <a href="tstrohl2003@gmail.com">tstrohl2003@gmail.com</a></p>
-            <p>Find me on <a href="https://github.com/phantomenderium" target="_blank" rel="noopener">GitHub</a> or <a href="https://twitter.com/your-handle" target="_blank" rel="noopener">Twitter</a>.</p>
+            <p>Find me on <a href="https://github.com/phantomenderium" target="_blank" rel="noopener">GitHub</a> or <a href="https://bsky.app/profile/phantomenderium.shadowloafs.xyz" target="_blank" rel="noopener">Bluesky</a>.</p>
         </section>
 
         <footer>
