under construction label to main page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 </head>
 <body>
     <main class="container">
+        <section id="construction-notice" style="background:#2a2a2e;padding:1rem;border-radius:8px;margin-bottom:2rem;border-left:4px solid #64b5f6">
+            <p style="margin:0;color:#ffd700"><strong>⚠️ Under Construction</strong> — This page is currently being updated. Check back soon!</p>
+        </section>
+
         <header>
             <img class="avatar" src="assets/tom-pfp.jpg" alt="Tom Strohl — Avatar" />
             <div>
