courtyard logo addition and other adjustments

--- a/courtyard/index.html
+++ b/courtyard/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Saflok Programming</title>
+    <title>Courtyard Bethlehem Tutorial Videos</title>
     <meta name="description" content="Saflok Programming Tutorial" />
     <style>
         :root{font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif;color:#e0e0e0;background:#1a1a1a}
         body{margin:0;line-height:1.45}
         .container{max-width:900px;margin:3rem auto;padding:1.25rem}
-        h1{margin:.5rem 0;font-size:1.5rem}
+        header{display:flex;align-items:center;gap:1rem;margin-bottom:.25rem;margin-left:-10rem}
+        .logo{height:60px;width:auto}
+        h1{margin:.5rem 0;font-size:2rem}
+        h2{margin:.5rem 0;font-size:1.5rem}
         .video-container{margin:2rem 0;aspect-ratio:16/9}
         iframe{width:100%;height:100%;border:none;border-radius:8px}
         a{color:#64b5f6;text-decoration:underline}
@@ -17,7 +20,13 @@
 </head>
 <body>
     <main class="container">
-        <h1>Saflok Programming</h1>
+        <header>
+            <img class="logo" src="assets/cy_logo_L.png" alt="Courtyard Logo" />
+        </header>
+
+        <h1>Tutorial Videos</h1>
+
+        <h2>Saflok Programming</h2>
         
         <div class="video-container">
             <iframe src="https://player.vimeo.com/video/1139868942?badge=0&autopause=0&player_id=0&app_id=58479" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" title="Saflok Programming"></iframe>
