--- a/index.html
+++ b/index.html
@@ -39,12 +39,20 @@
             <h2 id="about-heading">About</h2>
             <p>Currently working full-time while attending school part time.</p>
 
+            <div style="margin:1rem 0;padding:1rem;border:1px solid #333;border-radius:10px;background:#21242b">
+                <h3 style="margin-top:0">Resume snapshot</h3>
+                <p style="margin:.35rem 0 0">Resourceful programmer and support specialist who builds small tools to streamline operations, reduce errors, and speed up service. Comfortable bridging front-line customer work and technical problem-solving.</p>
+                <p style="margin:.5rem 0 0"><a href="/resume/" style="font-weight:600">View full resume →</a></p>
+            </div>
+
             <h3>Skills</h3>
             <div class="skills" aria-label="Skills">
                 <span class="skill">HTML</span>
                 <span class="skill">CSS</span>
                 <span class="skill">JavaScript</span>
                 <span class="skill">Git</span>
+                <span class="skill">Python</span>
+                <span class="skill">Automation</span>
             </div>
 
             <h3>Current Projects</h3>
@@ -56,7 +64,7 @@
 
         <section id="contact" aria-labelledby="contact-heading">
             <h2 id="contact-heading">Contact</h2>
-            <p>If you'd like to get in touch: <a href="tstrohl2003@gmail.com">tstrohl2003@gmail.com</a></p>
+            <p>If you'd like to get in touch: <a href="mailto:tstrohl2003@gmail.com">tstrohl2003@gmail.com</a></p>
             <p>Find me on <a href="https://github.com/phantomenderium" target="_blank" rel="noopener">GitHub</a> or <a href="https://bsky.app/profile/phantomenderium.shadowloafs.xyz" target="_blank" rel="noopener">Bluesky</a>.</p>
         </section>
 
