fixed image path location

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </section>
 
         <header>
-            <img class="avatar" src="assets/tom-pfp.jpg" alt="Tom Strohl — Avatar" />
+            <img class="avatar" src="assets/images/tom-pfp.jpg" alt="Tom Strohl — Avatar" />
             <div>
                 <h1>Tom Strohl</h1>
                 <p class="lead">Aspiring programmer</p>
