--- a/resume/index.html
+++ b/resume/index.html
@@ -152,8 +152,20 @@
 			<h2 id="education-heading">Education</h2>
 			<div class="card">
 				<div class="role-head">
-					<h3>Biological Science, Associate's (in progress)</h3>
-					<span class="muted">Northampton County Area Community College — Bethlehem, PA · Aug 2021 – Present</span>
+					<h3>Computer Science, Associate’s (In Progress)</h3>
+					<span class="muted">Northampton County Area Community College — Bethlehem, PA · Aug 2025 – Present</span>
+				</div>
+			</div>
+			<div class="card">
+				<div class="role-head">
+					<h3>Marine Science, Bachelor’s (Incomplete)</h3>
+					<span class="muted">Coastal Carolina University — Conway, SC · Aug 2023 – May 2024</span>
+				</div>
+			</div>
+			<div class="card">
+				<div class="role-head">
+					<h3>Biological Science, Associate’s</h3>
+					<span class="muted">Northampton County Area Community College — Bethlehem, PA · Aug 2021 – May 2023</span>
 				</div>
 			</div>
 		</section>
