--- a/resume/index.html
+++ b/resume/index.html
@@ -5,34 +5,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<title>Resume — Tom Strohl</title>
 	<meta name="description" content="Resume for Tom Strohl" />
-	<style>
-		:root {
-			font-family: system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif;
-			color: #e6e6e6;
-			background: #0f1115;
-		}
-		body { margin: 0; line-height: 1.55; }
-		a { color: #7cc2ff; }
-		.page { max-width: 960px; margin: 0 auto; padding: 2.5rem 1.25rem 3rem; }
-		header { display: flex; flex-wrap: wrap; align-items: flex-start; gap: 1rem; margin-bottom: 1.5rem; }
-		.title h1 { margin: 0; font-size: 2rem; }
-		.title p { margin: .15rem 0; color: #b8c1ce; }
-		.meta { color: #9aa5b5; font-size: .95rem; }
-		.card { background: #161a21; border: 1px solid #252c36; border-radius: 12px; padding: 1.25rem 1.5rem; box-shadow: 0 15px 40px rgba(0,0,0,0.25); }
-		.grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 1rem; }
-		h2 { margin: 1.75rem 0 .5rem; font-size: 1.3rem; letter-spacing: .01em; }
-		h3 { margin: 1rem 0 .35rem; font-size: 1.05rem; }
-		.pill { display: inline-block; background: #212735; color: #cbd5e1; padding: .35rem .65rem; border-radius: 999px; margin: .15rem .25rem .15rem 0; font-size: .9rem; }
-		ul { padding-left: 1.15rem; margin: .35rem 0 .75rem; }
-		li { margin-bottom: .4rem; }
-		.section { margin-top: 1.25rem; }
-		.role-head { display: flex; flex-wrap: wrap; justify-content: space-between; gap: .35rem; color: #cbd5e1; }
-		.muted { color: #9aa5b5; }
-		.tagline { color: #d5e1ff; font-weight: 600; }
-		.divider { border-top: 1px solid #252c36; margin: 1.5rem 0; }
-		footer { color: #8a94a6; font-size: .9rem; margin-top: 2rem; text-align: center; }
-		@media (max-width: 600px) { .page { padding: 2rem 1rem 2.5rem; } }
-	</style>
+	<link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 <body>
 	<main class="page">
