--- a/courtyard/index.html
+++ b/courtyard/index.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Courtyard Bethlehem Tutorial Videos</title>
     <meta name="description" content="Saflok Programming Tutorial" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
     <style>
-        :root{font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif;color:#e0e0e0;background:#1a1a1a}
-        body{margin:0;line-height:1.45}
-        .container{max-width:900px;margin:3rem auto;padding:1.25rem}
-        header{display:flex;align-items:center;gap:1rem;margin-bottom:.25rem;margin-left:-10rem}
+        header{margin-bottom:.25rem;margin-left:-10rem}
         .logo{height:60px;width:auto}
-        h1{margin:.5rem 0;font-size:2rem}
-        h2{margin:.5rem 0;font-size:1.5rem}
+        h2{font-size:1.5rem}
         .video-container{margin:2rem 0;aspect-ratio:16/9}
         iframe{width:100%;height:100%;border:none;border-radius:8px}
-        a{color:#64b5f6;text-decoration:underline}
+        @media (max-width: 900px) {
+            header{margin-left:0}
+        }
     </style>
 </head>
 <body>
