removed resume.txt, added hide tag for courtyard page

--- a/courtyard/index.html
+++ b/courtyard/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Courtyard Bethlehem Tutorial Videos</title>
     <meta name="description" content="Saflok Programming Tutorial" />
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <style>
         header{margin-bottom:.25rem;margin-left:-10rem}
