added calculus 1 page

--- a/ncc/index.html
+++ b/ncc/index.html
@@ -23,6 +23,9 @@
       <ul>
         <li><a href="./discretemath/">Discrete Math Cheat Sheet</a></li>
       </ul>
+      <ul>
+        <li><a href="./calculus1/">Calculus 1 Cheat Sheet</a></li>
+      </ul>
     </main>
 
     <footer>
