new file host for courtyard video: me

--- a/courtyard/index.html
+++ b/courtyard/index.html
@@ -29,9 +29,8 @@
         <h2>Saflok Programming</h2>
         
         <div class="video-container">
-            <iframe src="https://player.vimeo.com/video/1139868942?badge=0&autopause=0&player_id=0&app_id=58479" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" title="Saflok Programming"></iframe>
+            <iframe src="https://shadowloafs.xyz/media/Saflok&20Programming.mp4"></iframe>
         </div>
-        <script src="https://player.vimeo.com/api/player.js"></script>
 
         <p><a href="../">Back to Home</a></p>
     </main>
